chagement taille galery

--- a/src/components/Gallery/index.scss
+++ b/src/components/Gallery/index.scss
@@ -16,6 +16,7 @@
     }
     &__annonce{
         width: 30%;
+        height: 340px;
         position: relative;
         margin: 10px 10px;
         @media (max-width: 767px){
