--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -37,16 +37,16 @@
                 font-size: 40px;
             }
         }
-    }
-    span{    
-        position: absolute;
-        bottom: 5px;
-        color: white;
-        font-size: 20px;
-        font-weight: 700;
-        left: 50%;
-        @media (max-width: 767px){
-            display: none;
+        span{    
+            position: absolute;
+            top: 255%;
+            color: white;
+            font-size: 20px;
+            font-weight: 700;
+            left: 50%;
+            @media (max-width: 767px){
+                display: none;
+            }
         }
     }
 }
