--- a/src/components/Gallery/index.scss
+++ b/src/components/Gallery/index.scss
@@ -24,15 +24,13 @@
         }
         &__paragraphe{
             position: absolute;
-            bottom: 0px;
+            bottom: 0;
             border-radius: 0 0 8px 8px;
             height: 50%;
             width: 100%;
             color: white;
             background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
-            @media (max-width: 767px){
-                bottom: 4px;
-            }
+            
             h2{
                 position: absolute;
                 left: 10px;
