--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -7,6 +7,7 @@
     position: relative;
     @media (max-width: 767px){
         margin: 20px;
+        height: 255px;
     }
     &__img{
         height: 100%;
