--- a/src/components/Gallery/index.scss
+++ b/src/components/Gallery/index.scss
@@ -21,6 +21,7 @@
         margin: 10px 10px;
         @media (max-width: 767px){
             width: 90%;
+            height: 245px;
         }
         &__paragraphe{
             position: absolute;
