--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -24,9 +24,9 @@ header{
             color: $color-primary;
             text-decoration: none;
             margin: 0 5px;
-            &:hover {
-                text-decoration: underline;
-            }
+        }
+        .active{
+            text-decoration: underline;
         }
         
     }
