--- a/src/pages/Error/index.scss
+++ b/src/pages/Error/index.scss
@@ -8,7 +8,7 @@
         font-size: 71px;
     }
     a{
-        color:  $color-primary;
+        color:  $color-tertiary;
         padding: 60px 0;
     }
 }
