--- a/src/pages/Logements/index.scss
+++ b/src/pages/Logements/index.scss
@@ -26,6 +26,8 @@
             }
             p{
                 margin: 0 0 10px 0;
+                color: $color-tertiary;
+                font-weight: 500;
             }
         }
         &__droit{
