--- a/src/components/Banniere/index.scss
+++ b/src/components/Banniere/index.scss
@@ -6,7 +6,7 @@
     }
     &__filtreOpacite{
         background-color: black;
-        opacity: 0.3;
+        opacity: 0.6;
         width: 100%;
         height: 225px;
         position: absolute;
@@ -34,9 +34,13 @@
             color: white;
             font-size: 40px;
             top: 25%;
+            font-weight: 700;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
             @media (max-width: 767px){
-                font-size: 35px;
-                top: 20%;
+                font-size: 28px;
+                top: 10%;
+                left: 15px;
             }
         }
     }
