--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -12,18 +12,23 @@ header{
         width: 211px;
         height: 68px;
         @media (max-width: 767px) {
-            width: 145px;
-            height: 46.88px;
+            width: 110px;
+            height: 32.88px;
         }
     }
     nav{
         display: flex;
         flex-direction: row;
         gap: 57px;
+        align-items: center;
+        @media (max-width: 767px){
+            gap: 10px;
+        }
         a{
-            color: $color-primary;
+            color: $color-tertiary;
             text-decoration: none;
             margin: 0 5px;
+            font-weight: 500;
         }
         .active{
             text-decoration: underline;
