--- a/src/pages/About/index.scss
+++ b/src/pages/About/index.scss
@@ -9,19 +9,20 @@
     }
     p{
         padding: 0px 5px;
-        color: $color-primary;
+        color: $color-tertiary
     }
 }
 .banniereAbout{
     .banniere{
         &__filtreOpacite{
+            opacity: 0.3;
             @media (max-width: 767px){
-                height: 300px;
+                height: 150px;
             }
         }
         &__image{
             @media (max-width: 767px){
-                height: 300px;
+                height: 150px;
             }
         }
     }
